Cleaning code
Former-commit-id: b97290a8cfe70fd2fb1924ad160cb6177ad11754 [formerly 13d11defd71d0491b9ea209bcde82417c845b11a]
Former-commit-id: 1aca0acee6f892f66acf177cab22b11901a7af77